<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:id="@+id/main"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".Welcome"
		android:background="@drawable/backgrondthree">

	<TextView
			android:layout_width="291dp"
			android:layout_height="71dp"
			android:text="@string/please_enter_both_name"
			android:fontFamily="@font/vegan"
			android:textAlignment="center"
			android:textStyle="bold"
			android:textColor="@color/white"
			android:ems="10"
			android:textSize="24sp"
			android:id="@+id/editTextText"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			android:layout_marginTop="156dp"
			app:layout_constraintHorizontal_bias="0.496" />

	<EditText
			android:id="@+id/male_name"
			android:layout_width="232dp"
			android:layout_height="41dp"
			android:autofillHints=""
			android:inputType=""
			android:text=""
			android:fontFamily="@font/vegan"
			android:hint="@string/male"
			android:padding="10dp"
			android:textSize="15sp"
			android:textColor="#FFFFFF"
			android:textStyle="bold"
			android:background="@drawable/inputxt"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintHorizontal_bias="0.502"
			app:layout_constraintVertical_bias="0.594" />

	<EditText
			android:id="@+id/female_name"
			android:layout_width="232dp"
			android:layout_height="41dp"
			android:text=""
			android:hint="@string/female"
			android:fontFamily="@font/vegan"
			android:padding="10dp"
			android:textSize="15sp"
			android:textColor="#FFFFFF"
			android:textStyle="bold"
			android:background="@drawable/inputxt"
			app:layout_constraintBottom_toTopOf="@+id/male_name"
			app:layout_constraintTop_toBottomOf="@+id/editTextText"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.502"
			app:layout_constraintVertical_bias="0.769" />

	<com.google.android.material.button.MaterialButton
			android:id="@+id/start_button"
			android:layout_width="200dp"
			android:layout_height="65dp"
			android:text="@string/start"
			android:textColor="#FFFFFF"
			android:fontFamily="@font/beautiful"
			android:textAlignment="center"
			android:textSize="16sp"
			style="@style/Widget.MaterialComponents.Button"
			app:backgroundTint="#E91E63"
			app:layout_constraintEnd_toEndOf="@+id/male_name"
			app:layout_constraintStart_toStartOf="@+id/male_name"
			app:layout_constraintHorizontal_bias="0.416"
			app:layout_constraintTop_toBottomOf="@+id/male_name"
			android:layout_marginTop="84dp" />

	<Spinner
			android:id="@+id/version_spinner"
			android:layout_width="232dp"
			android:layout_height="41dp"
			android:background="@drawable/inputxt"
			android:padding="10dp"
			android:spinnerMode="dropdown"
			app:layout_constraintTop_toBottomOf="@+id/female_name"
			app:layout_constraintStart_toStartOf="@+id/male_name"
			app:layout_constraintEnd_toEndOf="@+id/male_name"
			android:layout_marginTop="96dp"
			app:layout_constraintHorizontal_bias="0.396" />

	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/love"
			android:textSize="24sp"
			android:textColor="#E91E63"
			android:textStyle="bold"
			android:fontFamily="@font/beautiful"
			android:textAlignment="center"
			app:layout_constraintTop_toBottomOf="@+id/start_button"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintHorizontal_bias="0.498"
			app:layout_constraintVertical_bias="0.323" />

	<TextView
			android:text="@string/devloped_by_akshay"
			android:layout_width="135dp"
			android:layout_height="16dp"
			android:textColor="@color/white"
			android:textSize="12sp"
			app:layout_constraintBottom_toBottomOf="parent"
			android:layout_marginEnd="4dp"
			app:layout_constraintEnd_toEndOf="parent"
			android:layout_marginBottom="24dp"
			android:id="@+id/textView5" />

</androidx.constraintlayout.widget.ConstraintLayout>